--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "firebase": "^10.14.0",
     "next": "^14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
