--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "firebase": "^10.14.0",
     "next": "^14.2.13",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "eslint": "^8",
